@@ -10,13 +10,6 @@ import galyleo.server.Renderer;
  */
 public interface AnnotatedRenderer extends Renderer {
     @Override
-    default String getMimeType() {
-        MimeType annotation = getClass().getAnnotation(MimeType.class);
-
-        return (annotation != null) ? annotation.value() : null;
-    }
-
-    @Override
     default Class<?> getForType() {
         ForType annotation = getClass().getAnnotation(ForType.class);
 
