@@ -16,9 +16,11 @@ import static galyleo.server.Server.OBJECT_MAPPER;
  * @version $Revision$
  */
 @ServiceProviderFor({ Renderer.class })
-@MimeType("application/json") @ForType(Map.class)
+@ForType(Map.class)
 @NoArgsConstructor @ToString
 public class MapRenderer extends JsonNodeRenderer {
+    private static final String MIME_TYPE = "application/json";
+
     @Override
     public void renderTo(ObjectNode bundle, Object object) {
         super.renderTo(bundle, OBJECT_MAPPER.valueToTree(object));
