@@ -1,22 +1,0 @@
-package galyleo.server.renderer;
-
-import java.lang.annotation.Documented;
-import java.lang.annotation.Retention;
-import java.lang.annotation.Target;
-
-import static java.lang.annotation.ElementType.TYPE;
-import static java.lang.annotation.RetentionPolicy.RUNTIME;
-
-/**
- * {@link AnnotatedRenderer#getMimeType()} source
- * {@link java.lang.annotation.Annotation}.
- *
- * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
- * @version $Revision$
- */
-@Documented
-@Retention(RUNTIME)
-@Target({ TYPE })
-public @interface MimeType {
-    String value();
-}
